--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
-    <link rel="stylesheet" href="/YouTubeStyle.css">
+    <link rel="stylesheet" href="YouTubeStyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 </head>
 
 <body>
     <header class="header">
         <a href="#">
-            <img src="/Icons/logo.png" alt="YouTube Logo" class="youtube-logo" />
+            <img src="Icons/logo.png" alt="YouTube Logo" class="youtube-logo" />
         </a>
         <form class="search-bar">
             <input type="search" class="search-input" placeholder="Search" aria-label="Search">
             <button type="submit" class="search-btn">
-                <img src="/Icons/magnify.svg" alt="search button">
+                <img src="Icons/magnify.svg" alt="search button">
             </button>
         </form>
         <div class="menu-icons">
             <a href="#">
-              <img src="/Icons/video-plus.svg" alt="Upload Video" />
+              <img src="Icons/video-plus.svg" alt="Upload Video" />
             </a>
             <a href="#">
-              <img src="/Icons/apps.svg" alt="Apps" />
+              <img src="Icons/apps.svg" alt="Apps" />
             </a>
             <a href="#">
-              <img src="/Icons/bell.svg" alt="Notifications" />
+              <img src="Icons/bell.svg" alt="Notifications" />
             </a>
             <a href="#">
               <img class="menu-channel-icon" src="http:///unsplash.it/36/36?gravity=center" alt="Your Channel" />
